# C-Go-Node.js-

./: README.md
log-receiver/: ALERT_FIX_README.md  CONFIG_FIX_README.md  docker-compose.yml  start.ps1  start.sh
log-receiver/config/: config.json  config.yaml  config_bad_indent.yaml  config_bad_type.yaml  config_extra_field.yaml
log-receiver/cpp/: CMakeLists.txt  Dockerfile
log-receiver/cpp/include/: config.h  log_receiver.h  redis_publisher.h  zero_copy_queue.h
log-receiver/cpp/src/: config.cpp  log_receiver.cpp  main.cpp  redis_publisher.cpp  zero_copy_queue.cpp
log-receiver/go/: Dockerfile  alert_manager.go  config.go  go.mod  grpc_server.go  log_parser.go  main.go  metrics_manager.go
log-receiver/go/proto/: log_service.pb.go
log-receiver/nodejs/: Dockerfile  config.js  main.js  package.json
log-receiver/nodejs/grpc/: client.js  log_service.proto
log-receiver/nodejs/routes/: alerts.js  logs.js  metrics.js  webhook.js
log-receiver/proto/: log_service.proto
